Complete fantasy football FAAB blog system implementation
- Implement all core agents (data collection, research, analysis, writer, publisher)
- Add comprehensive API integrations for fantasy platforms and news services
- Create robust orchestration system with error handling and scheduling
- Add CLI interface and health monitoring
- Include extensive test coverage and documentation
- Set up deployment scripts and operational guides

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,46 @@
+# Environment variables template
+# Copy this file to .env and fill in your actual values
+
 # Fantasy Platform API Keys
 ESPN_API_KEY=your_espn_api_key_here
 YAHOO_API_KEY=your_yahoo_api_key_here
 YAHOO_API_SECRET=your_yahoo_api_secret_here
 SLEEPER_API_KEY=your_sleeper_api_key_here
 
-# Sports News API Keys
+# News Service API Keys
 ESPN_NEWS_API_KEY=your_espn_news_api_key_here
 SPORTS_DATA_API_KEY=your_sports_data_api_key_here
 
 # Blog Platform Configuration
 BLOG_API_KEY=your_blog_api_key_here
-BLOG_BASE_URL=your_blog_base_url_here
-BLOG_USERNAME=your_blog_username_here
-BLOG_ID=your_blog_id_here
+BLOG_BASE_URL=https://your-blog-site.com
+BLOG_USERNAME=your_blog_username
+BLOG_ID=your_blog_id
+
+# Schedule Configuration (optional - overrides config file)
+SCHEDULE_DAY_OF_WEEK=2
+SCHEDULE_HOUR=6
+SCHEDULE_TIMEZONE=America/New_York
 
 # Application Configuration
-NODE_ENV=development
+NODE_ENV=production
 LOG_LEVEL=info
-TIMEZONE=America/New_York
 
-# Scheduling Configuration
-SCHEDULE_DAY_OF_WEEK=2
-SCHEDULE_HOUR=10
+# Health Monitoring (optional)
+HEALTH_CHECK_PORT=3001
+METRICS_PORT=3002
+
+# Database Configuration (if using persistent storage)
+DATABASE_URL=sqlite://./data/faab-blog.db
+
+# Webhook Configuration (optional)
+WEBHOOK_URL=https://your-webhook-endpoint.com/notify
+EMAIL_SMTP_HOST=smtp.gmail.com
+EMAIL_SMTP_PORT=587
+EMAIL_USERNAME=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
+EMAIL_FROM=your-email@gmail.com
+EMAIL_TO=admin@yoursite.com
 
 # Rate Limiting Configuration
 DEFAULT_REQUESTS_PER_MINUTE=60
