--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "Automated AI agentic system for generating fantasy football FAAB acquisition blog posts",
   "main": "dist/index.js",
+  "bin": {
+    "faab-blog": "dist/cli.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
+    "cli": "ts-node src/cli.ts",
     "dev": "ts-node src/index.ts",
     "test": "vitest --run",
     "test:watch": "vitest",
@@ -28,7 +32,8 @@
     "dotenv": "^16.3.1",
     "winston": "^3.11.0",
     "cheerio": "^1.0.0-rc.12",
-    "date-fns": "^2.30.0"
+    "date-fns": "^2.30.0",
+    "commander": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.8.0",
